css/main.css
html, body {
	margin: 0;
	height: 100%;
	--darkdarkgray: #222222;
	--darkgray: #333333;
	--gray: #888888;
	--lightlightgray: #bbbbbb;
}
body {
	background-color: var(--darkdarkgray);
	font-family: "nova mono", monospace;
}


/* BACKGROUND IMAGES */
.parallax {
	background-size: cover;
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	opacity: 0.65;
	position: relative;
}

.back0 {
	background-image: url("../images/parallax-bgs/cute-corgo-hd.jpg");
	min-height: 76%;	/* arbitrary value to set welcome banner at bottom of page */
}
.back1 {
	background-image: url("../images/parallax-bgs/sunrise-mini-hd.jpg");
	/* min-height: 1000px; */
	min-height: 100%;
}
.back2 {
	background-image: url("../images/parallax-bgs/cars-beach-background-hd.jpg");
	/* min-height: 700px; */
	min-height: 70%;
}
.back3 {
	background-image: url("../images/parallax-bgs/beach-seagull-hd.jpg");
	/* min-height: 700px; */
	min-height: 70%;
}
.back4 {
	background-image: url("../images/parallax-bgs/rock-alone-hd.jpg");
	/* min-height: 1000px; */
	min-height: 85%;
}


/* WELCOME */
.welcome {
	padding: 35px 50px 50px 50px;
	text-align: center;
	background-color: var(--lightlightgray);
}

#banner {	/* animated "hello" */
	margin: 0;
	padding: 0;
}

.welcome span {
	padding: 0;
}

.banner, .cursor {	/* <welcome|> */
	display: inline;
	font-size: 3em;
}

.banner::before {content: "<";}
.banner::after {content: ">";}

.cursor {	/* blinking cursor */
	position: relative;
	right: 0.85em;
	animation-name: blink;
	animation-duration: 800ms;
	animation-iteration-count: infinite;
}

@keyframes blink {
	0% {opacity: 1;}
	50% {opacity: 0;}
	100% {opacity: 1;}
}

.welcome p {	/* paragraph */
	max-width: 1000px;
	margin-left: auto;
	margin-right: auto;	/* center text */
}


/* CAPTIONS */
.caption {
	text-align: center;
	position: absolute;
	top: 50%;
	width: 100%;
}

.caption span {
	color: white;
	background-color: var(--gray);
	opacity: 0.7;
	padding: 1em;
	font-size: 1.3em;
	letter-spacing: 0.3em;
}


/* CONTENT */
.separator {
	text-align: center;
	background-color: var(--darkgray);
	padding: 10px 20px;
	align-content: center;
}

.separator p {
	color: white;
	max-width: 850px;
	margin-left: auto;
	margin-right: auto;
}

